fast/events/event-handler-detached-document-dispatchEvent.html is crashing https://bugs.webkit.org/show_bug.cgi?id=210859 <rdar://problem/62072269>

Reviewed by Jer Noble.

A media session may not have a Page when it is created, so register with the MediaUsageManager
in inActiveDocumentChanged if necessary.

No new tests, fixes an existing test.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::MediaElementSession):
(WebCore::MediaElementSession::~MediaElementSession):
(WebCore::MediaElementSession::addedMediaUsageManagerSessionIfNecessary):
(WebCore::MediaElementSession::inActiveDocumentChanged):
(WebCore::MediaElementSession::updateMediaUsageIfChanged):
* html/MediaElementSession.h:


Canonical link: https://commits.webkit.org/223763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260529 268f45cc-cd09-0410-ab3c-d52691b4dbfc